added in icons to pick from

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             </button>
           </div>
           <div class="flex justify-center icon-picker-container">
-            <div class="flex flex-wrap gap-3">
+            <div class="flex flex-wrap justify-center gap-3 text-center">
               <a href="#"
                 ><i
                   class="fa-solid fa-hand-sparkles fa-2x text-emerald-600 cursor-pointer picker-icon"
@@ -180,7 +180,254 @@
               ></a>
               <a href="#"
                 ><i
+                  class="fa-solid fa-hand fa-2x cursor-pointer picker-icon"
+                ></i
+              ></a>
+              <a href="#"
+                ><i
+                  class="fa-regular fa-hand fa-2x cursor-pointer picker-icon"
+                ></i
+              ></a>
+              <a href="#"
+                ><i
                   class="fa-solid fa-spray-can-sparkles fa-2x cursor-pointer picker-icon"
+                ></i
+              ></a>
+              <a href="#"
+                ><i
+                  class="fa-solid fa-spray-can fa-2x cursor-pointer picker-icon"
+                ></i
+              ></a>
+              <a href="#"
+                ><i
+                  class="fa-solid fa-pump-soap fa-2x cursor-pointer picker-icon"
+                ></i
+              ></a>
+              <a href="#"
+                ><i
+                  class="fa-solid fa-jug-detergent fa-2x cursor-pointer picker-icon"
+                ></i
+              ></a>
+              <a href="#"
+                ><i
+                  class="fa-solid fa-shower fa-2x cursor-pointer picker-icon"
+                ></i
+              ></a>
+              <a href="#"
+                ><i
+                  class="fa-solid fa-wand-magic fa-2x cursor-pointer picker-icon"
+                ></i
+                >i</a
+              >
+              <a href="#"
+                ><i
+                  class="fa-solid fa-wand-magic-sparkles fa-2x cursor-pointer picker-icon"
+                ></i
+              ></a>
+              <a href="#"
+                ><i
+                  class="fa-solid fa-wand-sparkles fa-2x cursor-pointer picker-icon"
+                ></i
+              ></a>
+              <a href="#"
+                ><i
+                  class="fa-solid fa-soap fa-2x cursor-pointer picker-icon"
+                ></i
+              ></a>
+              <a href="#"
+                ><i
+                  class="fa-solid fa-ribbon fa-2x cursor-pointer picker-icon"
+                ></i
+              ></a>
+              <a href="#"
+                ><i
+                  class="fa-solid fa-toilet fa-2x cursor-pointer picker-icon"
+                ></i
+              ></a>
+              <a href="#"
+                ><i
+                  class="fa-solid fa-sink fa-2x cursor-pointer picker-icon"
+                ></i
+              ></a>
+              <a href="#"
+                ><i
+                  class="fa-solid fa-bucket fa-2x cursor-pointer picker-icon"
+                ></i
+              ></a>
+              <a href="#"
+                ><i class="fa-solid fa-bed fa-2x cursor-pointer picker-icon"></i
+              ></a>
+              <a href="#"
+                ><i
+                  class="fa-solid fa-toilet-paper fa-2x cursor-pointer picker-icon"
+                ></i
+              ></a>
+              <a href="#"
+                ><i
+                  class="fa-solid fa-rainbow fa-2x cursor-pointer picker-icon"
+                ></i
+              ></a>
+              <a href="#"
+                ><i
+                  class="fa-solid fa-virus-covid-slash fa-2x cursor-pointer picker-icon"
+                ></i
+              ></a>
+              <a href="#"
+                ><i
+                  class="fa-solid fa-house fa-2x cursor-pointer picker-icon"
+                ></i
+              ></a>
+              <a href="#"
+                ><i
+                  class="fa-solid fa-star fa-2x cursor-pointer picker-icon"
+                ></i
+              ></a>
+              <a href="#"
+                ><i
+                  class="fa-regular fa-star fa-2x cursor-pointer picker-icon"
+                ></i
+              ></a>
+              <a href="#"
+                ><i
+                  class="fa-solid fa-heart fa-2x cursor-pointer picker-icon"
+                ></i
+              ></a>
+              <a href="#"
+                ><i
+                  class="fa-regular fa-heart fa-2x cursor-pointer picker-icon"
+                ></i
+              ></a>
+              <a href="#"
+                ><i
+                  class="fa-solid fa-hand-holding-heart fa-2x cursor-pointer picker-icon"
+                ></i
+              ></a>
+              <a href="#"
+                ><i
+                  class="fa-solid fa-magnifying-glass fa-2x cursor-pointer picker-icon"
+                ></i
+              ></a>
+              <a href="#"
+                ><i
+                  class="fa-solid fa-check fa-2x cursor-pointer picker-icon"
+                ></i
+              ></a>
+              <a href="#"
+                ><i
+                  class="fa-solid fa-circle-check fa-2x cursor-pointer picker-icon"
+                ></i
+              ></a>
+              <a href="#"
+                ><i
+                  class="fa-regular fa-circle-check fa-2x cursor-pointer picker-icon"
+                ></i
+              ></a>
+              <a href="#"
+                ><i
+                  class="fa-solid fa-paperclip fa-2x cursor-pointer picker-icon"
+                ></i
+              ></a>
+              <a href="#"
+                ><i class="fa-solid fa-pen fa-2x cursor-pointer picker-icon"></i
+              ></a>
+              <a href="#"
+                ><i
+                  class="fa-solid fa-list fa-2x cursor-pointer picker-icon"
+                ></i
+              ></a>
+              <a href="#"
+                ><i
+                  class="fa-solid fa-circle-info fa-2x cursor-pointer picker-icon"
+                ></i
+              ></a>
+              <a href="#"
+                ><i
+                  class="fa-solid fa-clock fa-2x cursor-pointer picker-icon"
+                ></i
+              ></a>
+              <a href="#"
+                ><i
+                  class="fa-regular fa-clock fa-2x cursor-pointer picker-icon"
+                ></i
+              ></a>
+              <a href="#"
+                ><i class="fa-solid fa-tag fa-2x cursor-pointer picker-icon"></i
+              ></a>
+              <a href="#"
+                ><i
+                  class="fa-solid fa-money-bill fa-2x cursor-pointer picker-icon"
+                ></i
+              ></a>
+              <a href="#"
+                ><i class="fa-solid fa-key fa-2x cursor-pointer picker-icon"></i
+              ></a>
+              <a href="#"
+                ><i
+                  class="fa-solid fa-thumbtack fa-2x cursor-pointer picker-icon"
+                ></i
+              ></a>
+              <a href="#"
+                ><i
+                  class="fa-solid fa-bolt fa-2x cursor-pointer picker-icon"
+                ></i
+              ></a>
+              <a href="#"
+                ><i
+                  class="fa-solid fa-flask fa-2x cursor-pointer picker-icon"
+                ></i
+              ></a>
+              <a href="#"
+                ><i
+                  class="fa-solid fa-feather fa-2x cursor-pointer picker-icon"
+                ></i
+              ></a>
+              <a href="#"
+                ><i
+                  class="fa-solid fa-bomb fa-2x cursor-pointer picker-icon"
+                ></i
+              ></a>
+              <a href="#"
+                ><i
+                  class="fa-solid fa-gift fa-2x cursor-pointer picker-icon"
+                ></i
+              ></a>
+              <a href="#"
+                ><i class="fa-solid fa-poo fa-2x cursor-pointer picker-icon"></i
+              ></a>
+              <a href="#"
+                ><i
+                  class="fa-solid fa-trash fa-2x cursor-pointer picker-icon"
+                ></i
+              ></a>
+              <a href="#"
+                ><i
+                  class="fa-solid fa-face-smile fa-2x cursor-pointer picker-icon"
+                ></i
+              ></a>
+              <a href="#"
+                ><i
+                  class="fa-regular fa-face-smile fa-2x cursor-pointer picker-icon"
+                ></i
+              ></a>
+              <a href="#"
+                ><i class="fa-solid fa-dog fa-2x cursor-pointer picker-icon"></i
+              ></a>
+              <a href="#"
+                ><i class="fa-solid fa-cat fa-2x cursor-pointer picker-icon"></i
+              ></a>
+              <a href="#"
+                ><i
+                  class="fa-solid fa-ghost fa-2x cursor-pointer picker-icon"
+                ></i
+              ></a>
+              <a href="#"
+                ><i
+                  class="fa-solid fa-truck-fast fa-2x cursor-pointer picker-icon"
+                ></i
+              ></a>
+              <a href="#"
+                ><i
+                  class="fa-solid fa-truck-front fa-2x cursor-pointer picker-icon"
                 ></i
               ></a>
               <a href="#"
@@ -213,6 +460,31 @@
                   class="fa-regular fa-calendar fa-2x cursor-pointer picker-icon"
                 ></i
               ></a>
+              <a href="#"
+                ><i
+                  class="fa-regular fa-calendar-xmark fa-2x cursor-pointer picker-icon"
+                ></i>
+              </a>
+              <a href="#"
+                ><i
+                  class="fa-solid fa-calendar-xmark fa-2x cursor-pointer picker-icon"
+                ></i>
+              </a>
+              <a href="#"
+                ><i
+                  class="fa-solid fa-calendar-plus fa-2x cursor-pointer picker-icon"
+                ></i>
+              </a>
+              <a href="#"
+                ><i
+                  class="fa-solid fa-calendar-minus fa-2x cursor-pointer picker-icon"
+                ></i>
+              </a>
+              <a href="#"
+                ><i
+                  class="fa-solid fa-calendar-check fa-2x cursor-pointer picker-icon"
+                ></i>
+              </a>
             </div>
           </div>
         </div>
