--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       class="icon-modal bg-black bg-opacity-70 h-screen fixed top-0 left-0 w-full backdrop-blur-sm items-center justify-center hidden invisible"
     >
       <div
-        class="bg-white p-3 shadow-lg rounded-tl-xl rounded-bl-xl w-[70vw] max-w-md max-h-full border-2 border-white overflow-y-scroll dark:bg-gradient-to-br dark:from-zinc-700 dark:to-neutral-800 dark:text-white"
+        class="max-h-[80vh] sm:max-h-[95vh] bg-white p-3 shadow-lg rounded-tl-xl rounded-bl-xl w-[70vw] max-w-md border-2 border-white overflow-y-scroll dark:bg-gradient-to-br dark:from-zinc-700 dark:to-neutral-800 dark:text-white"
       >
         <div class="px-4 pt-2">
           <div
