fixed app settings modal look on small screens

--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
         </div>
       </div>
       <div
-        class="bg-white p-3 shadow-lg rounded-tl-xl rounded-bl-xl w-[85vw] max-w-md max-h-full xs:min-h-[90vh] border-2 border-white dark:bg-gradient-to-br dark:from-zinc-700 dark:to-neutral-800 dark:text-white"
+        class="bg-white p-3 shadow-lg rounded-tl-xl rounded-bl-xl w-[85vw] max-w-md max-h-full sm:min-h-[90vh] border-2 border-white dark:bg-gradient-to-br dark:from-zinc-700 dark:to-neutral-800 dark:text-white"
       >
         <div class="px-4 pt-2 overflow-x-hidden">
           <div
