made enter clean name input look better

--- a/index.html
+++ b/index.html
@@ -12885,7 +12885,7 @@
                     name="clean-name"
                     placeholder="Enter Clean Name"
                     id="clean-name"
-                    class="text-black border-2 border-black hover:outline-emerald-600"
+                    class="text-black text-center border-2 border-black hover:outline-emerald-600"
                   />
                   <button
                     class="border-2 border-black dark:border-white dark:hover:border-emerald-600 px-2 hover:shadow-2xl hover:border-emerald-600 hover:text-emerald-600 add-clean-btn"
@@ -12893,7 +12893,7 @@
                     Add Clean
                   </button>
                   <button class="hover:text-red-500 cancel-add-clean">
-                    <i class="fa-regular fa-rectangle-xmark"></i>
+                    <i class="fa-regular fa-rectangle-xmark fa-xl"></i>
                   </button>
                 </div>
               </form>
